// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customise author 1`] = `
Array [
  "git config user.email \\"testbot@test.de\\"",
  "git config user.name \\"testbot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
]
`;

exports[`default author 1`] = `
Array [
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
]
`;

exports[`no GK_LOCK_COMMIT_AMEND 1`] = `
Array [
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
]
`;

exports[`no status 1`] = `
Array [
  "git status --porcelain",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
]
`;

exports[`with falsy GK_LOCK_COMMIT_AMEND 1`] = `
Array [
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
]
`;

exports[`with truthy GK_LOCK_COMMIT_AMEND 1`] = `
Array [
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git commit --amend --author=\\"greenkeeperio-bot <support@greenkeeper.io>\\" --no-edit",
]
`;

exports[`with truthy GK_LOCK_COMMIT_AMEND and GK_LOCK_COMMIT_NAME/EMAIL 1`] = `
Array [
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"Example Person\\"",
  "git commit --amend --author=\\"Example Person <support@greenkeeper.io>\\" --no-edit",
]
`;
